feat: add uploadable base stage library
